--- a/guns-admin/src/main/webapp/WEB-INF/view/login.html
+++ b/guns-admin/src/main/webapp/WEB-INF/view/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>会员管理系统后台 - 登录</title>
+    <title>信息采集系统后台 - 登录</title>
 
     <link rel="shortcut icon" href="${ctxPath}/static/img/logo.jpg">
     <link href="${ctxPath}/static/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
@@ -24,7 +24,7 @@
         <div>
 
         </div>
-        <h3>会员系统</h3>
+        <h3>信息采集系统</h3>
         <br/>
         <h4 style="color: red;">${tips!}</h4>
         <form class="m-t" role="form" action="${ctxPath}/login" method="post">
