--- a/guns-admin/src/main/webapp/WEB-INF/view/system/dept/dept_add.html
+++ b/guns-admin/src/main/webapp/WEB-INF/view/system/dept/dept_add.html
@@ -7,9 +7,9 @@
 
             <div class="row">
                 <div class="col-sm-6 b-r">
-                    <#input id="simplename" name="门店名称" underline="true"/>
+                    <#input id="simplename" name="部门名称" underline="true"/>
 
-                    <#input id="fullname" name="门店全称" underline="true"/>
+                    <#input id="fullname" name="部门全称" underline="true"/>
 
                     <#input id="linkman" name="联系人" underline="true"/>
                     <#input id="tel" name="联系方式" underline="true"/>
@@ -19,7 +19,7 @@
                 <div class="col-sm-6">
                     <#input id="num" name="排序" underline="true"/>
 
-                    <#input id="pName" name="上级门店" readonly="readonly" hidden="pid"
+                    <#input id="pName" name="上级部门" readonly="readonly" hidden="pid"
                             clickFun="DeptInfoDlg.showDeptSelectTree(); return false;"
                             style="background-color: #ffffff !important;"/>
                     <#input id="tips" name="备注" underline="true"/>
