--- a/guns-admin/src/main/webapp/WEB-INF/view/system/user/user_edit.html
+++ b/guns-admin/src/main/webapp/WEB-INF/view/system/user/user_edit.html
@@ -27,7 +27,7 @@
 						<#input id="birthday" name="出生日期" underline="true" type="text"
 						value="${user.birthday}"/>
 
-						<#input id="citySel" name="门店" underline="true" readonly="readonly" hidden="deptid" hiddenValue="${user.deptid}" value="${deptName}"
+						<#input id="citySel" name="部门" underline="true" readonly="readonly" hidden="deptid" hiddenValue="${user.deptid}" value="${deptName}"
 						clickFun="UserInfoDlg.showDeptSelectTree(); return false;"
 						style="background-color: #ffffff !important;"/>
 
