--- a/guns-admin/src/main/webapp/WEB-INF/view/face/firstVisitAssessmentTable/firstVisitAssessmentTable.html
+++ b/guns-admin/src/main/webapp/WEB-INF/view/face/firstVisitAssessmentTable/firstVisitAssessmentTable.html
@@ -3,7 +3,7 @@
     <div class="col-sm-12">
         <div class="ibox float-e-margins">
             <div class="ibox-title">
-                <h5>基础信息管理</h5>
+                <h5>首次走访信息管理</h5>
             </div>
             <div class="ibox-content">
                 <div class="row row-lg">
